@@ -1,6 +1,6 @@
-4512a0d3ef91372cdc6f5fa03f3bed1c *DESCRIPTION
+1eb446c01f848adaac9914dffedc379f *DESCRIPTION
 27bf59c2a37bff07a78c9730061e532b *LICENSE
-bdf19d7fa87a004f9b2edeae711f2d86 *NAMESPACE
+86c6f4cfd557233b11e596a7cef236d5 *NAMESPACE
 7dcca3f9e623c3309322180daf26c7f5 *R/Ginv.R
 dd3dbda43c57931ca381e580f02bcdca *R/anova.haplo.glm.q
 d50dcb451639ac60dd7c19fac6b7f47d *R/chisq.power.q
@@ -10,7 +10,7 @@ e25d932260f95f734c3d44e876b2c282 *R/find.haplo.beta.qt.q
 095fae40628d83b2299d4cddee822f05 *R/geno.count.pairs.q
 b5dda9e515218788c391762993f80de2 *R/geno1to2.q
 eb53f16706da9d96b3a794bd15119b35 *R/get.hapPair.q
-409775a002e99276fd36950638aab1ec *R/glm.fit.nowarn.R
+aa0f1b76121dd2c4cb2e63f149c05f43 *R/haplo.binomial.R
 33efdb6c8761036c3ababd0db9448dcb *R/haplo.cc.q
 6647804e93266e284a41584ea2145d9a *R/haplo.chistat.q
 0187e0c5a3eb6852ba1b603c6fa39ffe *R/haplo.design.q
@@ -19,7 +19,7 @@ fd414b94a392ce5f00645875fd2deda3 *R/haplo.em.fitter.q
 3291edc30eccca0f0a66c5257d2e1a94 *R/haplo.em.q
 7c1f182e35d9fd993cc892b10036204f *R/haplo.enum.q
 fff31375db75a909b6d9f9492714bc15 *R/haplo.glm.control.q
-7a8127b8eb01232de9764bf4e35cda04 *R/haplo.glm.q
+f904ffe0d37d6b1114e48a99dfae1a49 *R/haplo.glm.q
 b1c05551780e9c9cf0174d4fc8b255e7 *R/haplo.group.q
 cc2eb2ad4433e47bb2da238347113c76 *R/haplo.hash.q
 f72942fbab0e6563717da0630124dd8d *R/haplo.model.frame.q
@@ -64,13 +64,13 @@ b9d82ad608c6eb8dcb8633f0c8af25d9 *R/residScaledGlmFit.q
 1248bf03ef39261e6a9eeb641acbaa42 *R/varfunc.glm.fit.q
 a030452a0250f7d1003029e33aed5813 *R/x.sexcheck.q
 506e3f306ba307dc085535e1d15b033f *R/zzz.haplo.stats.R
-4eed20f1d136a50e9996fb5802b0ca28 *data/hapPower.demo.tab.gz
+1dd590a772664a4981a9fd6a1502e336 *data/hapPower.demo.tab.gz
 b395516007295803e95e4951b0066373 *data/hla.demo.tab.gz
 57ef4a88591f0afdc4c9cfb4421c83eb *data/seqhap.dat.tab.gz
 a7ee89da0aff191a340c312643f7cd73 *data/seqhap.pos.tab.gz
-07da7e9a36ac212a949ef506ce438b40 *inst/NEWS.Rd
+7e2b9de6da719ed356106ba206c95585 *inst/NEWS.Rd
 d368405f1c604912f51ba286eed9944a *inst/doc/GPL.txt
-eb42887447dca08e5ee016b1f46018f8 *inst/doc/manualHaploStats.pdf
+9f89b8c7cf8486e9d915bc348e212e9b *inst/doc/manualHaploStats.pdf
 10ae00dab9c8f986bf5b6c64eef98521 *man/Ginv.Rd
 bf6f1a85454445157ab798632128e8ab *man/anova.haplo.glm.Rd
 66849779ea8731d335378d06d80e2765 *man/chisq.power.Rd
@@ -80,14 +80,13 @@ db91582985a8b36773fb4a630093103f *man/f.power.Rd
 5ee2b1b80a823a7f817fd842220c9a15 *man/geno.count.pairs.Rd
 5c3c255ac744a2901c88df992d479856 *man/geno1to2.Rd
 890c2d7f237cd53892f34e807a2243d4 *man/get.hapPair.Rd
-95f74c45001b12d8c933aed31d32e625 *man/glm.fit.nowarn.Rd
 5c570995091807fafdc54328c8397e8d *man/hapPower.demo.Rd
 fa5761d6d2ec162bc2e166178d9d0fdd *man/haplo.cc.Rd
 40b08effca91f62248c0ebc024b5a605 *man/haplo.design.Rd
 e0339787d1b0f74db1824e48dd4afd89 *man/haplo.em.Rd
 893eb6068777d212c75dd717b4a8b17b *man/haplo.em.control.Rd
 6e75eaa661ff17a0461a50a4a7a98612 *man/haplo.em.fitter.Rd
-3e0e6aa4b1f7973f803811e8f1ea1ca8 *man/haplo.glm.Rd
+5305a4124920a329f2f57ab1e7a90ef1 *man/haplo.glm.Rd
 d9a1a556832dae001e6393605d26bfe9 *man/haplo.glm.control.Rd
 c80a3a8a7ac0f61128cd6d5efe8f341f *man/haplo.group.Rd
 6dd0e65f2b9fa8ced4db590319a8df34 *man/haplo.hash.Rd
@@ -99,7 +98,7 @@ ecbb99210a6ecaba9ad3ef0542a1a744 *man/haplo.score.Rd
 317e563055a67f95d71bc48ddc53a645 *man/haplo.score.merge.Rd
 9b29053f1a486222a80c60f8d25e144f *man/haplo.score.slide.Rd
 a265736547bb7e3687040801c27d6461 *man/hla.demo.Rd
-f3c47cfe4b4a2d308dd2640e2d7e6c6e *man/internalHaploStats.Rd
+ce01593c02ef7c1c2db3947b0d7f16a5 *man/internalHaploStats.Rd
 4b006e76723557a85ebf43bbe8340d2c *man/locator.haplo.Rd
 362811ed7cdafcf3d6b0e73154c4917d *man/locus.Rd
 0733a88122d95a63b6ed36d689fbebfa *man/louis.info.Rd
@@ -125,7 +124,7 @@ d1cfb119490d981c6a87139f300a2e64 *man/summary.haplo.em.Rd
 4185eeead82af70e89287a1bba387d3d *man/summaryGeno.Rd
 5a7526093b42563decf4be82a0e9d14a *man/vcov.haplo.glm.Rd
 03e1d61ee4c2c81c306a08fa00f86e92 *man/x.sexcheck.Rd
-45eac0ccc6d8fb488f0f44dcc3b2ea94 *rnw/manualHaploStats.Rnw
+85648a00108226e524c507ecbcbd6261 *rnw/manualHaploStats.Rnw
 8eb8bdef919d148287565fd8334474f6 *src/groupsum.c
 9a5d53ad231fb8cf088bdfbb66ea045a *src/haplo_em_pin.c
 55c60fb632f1f32c26c983f1c78f7baf *src/haplo_em_pin.h
